--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "rest-sessions",
     "description": "A REST interface for redis-sessions",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "author": "P. Liess <smrchy+npm@gmail.com>",
     "engines": {
 		"node": "> 0.8.10"
@@ -27,7 +27,12 @@
 		"redis",
 		"session",
 		"users",
-		"activity"
+		"activity",
+		"php",
+		"coldfusion",
+		"asp",
+		".net",
+		"python"
 	],
 	"repository" : {
 		"type": "git",
