--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"dependencies": {
 		"redis-sessions": "*",
 		"express": "*",
-		"underscore": "= 1.4.4"
+		"underscore": "*"
 	},
 	"devDependencies": {
 		"mocha": "*",
