--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
   "name": "rest-sessions",
   "description": "A REST interface for redis-sessions",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "license": "MIT",
   "author": "P. Liess <smrchy+npm@gmail.com>",
   "engines": {
-    "node": "> 0.10.20"
+    "node": "> 10"
   },
   "scripts": {
+    "build": "coffee -bc *.coffee",
     "test": "mocha ./test/test.js"
   },
   "bin": {
     "rest-sessions": "./bin/rest-sessions.js"
   },
   "dependencies": {
-    "redis-sessions": "^1.1",
-    "express": "4.13.4",
-    "lodash": "^4.x",
-    "morgan": "^1.6.1",
-    "body-parser": "^1.14.2"
+    "redis-sessions": "3.0.0",
+    "express": "4.17.1",
+    "lodash": "^4.17.20",
+    "morgan": "^1.10.0",
+    "body-parser": "^1.19.0"
   },
   "devDependencies": {
+    "async": "*",
+    "coffeescript": "^2.5.1",
     "mocha": "*",
-    "should": "*",
-    "async": "*"
+    "should": "*"
   },
   "keywords": [
     "rest",
